services/kubia-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-headless-service
  labels:
    app: kubia
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: kubia
