services/kubia-service-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080
  selector:
   app: kubia
