services/kubia-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport-service
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080
  selector:
   app: kubia
