services/kubia-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
   app: kubia
